<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Event" Id="{7e1c4e30-39f8-404e-b7cc-de3f99665e4d}">
    <Declaration><![CDATA[TYPE ST_Event :
STRUCT
	eEventType : E_Type;
	eEventSeverity : TCEventSeverity;
	nEventDefinition : UINT;
	sEventMessage : STRING(100);
	tTimeStamp : DATE_AND_TIME;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>